src/test/resources/cocos/invalid/MissingPlace.pn
petrinet MissingPlace {
    place P;

    transition T:
        1 <- Q
}